z-index fix

--- a/newamericadotorg/assets/scss/pages/home/index.scss
+++ b/newamericadotorg/assets/scss/pages/home/index.scss
@@ -5,7 +5,7 @@
   &__story-grid-section{
     max-height: 750px;
     position: relative;
-    z-index: 2;
+    z-index: 1;
   }
 
   &__mission-statement-section {
